Improve handling of experimental features.